Implemented command structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = "3.2.20"
 tonic = "0.8.1"
+
+[dependencies.clap]
+version = "3.2.20"
+features = ["derive"]
