--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tonic = "0.8.1"
 prost = "0.11.0"
+futures = "0.3.24"
 
 [dependencies.tokio]
 version = "1.21.0"
 features = ["full"]
+
+[dependencies.tonic]
+version = "0.8.1"
+features = ["prost", "gzip"]
 
 [dependencies.clap]
 version = "3.2.20"
