Added init method for mock server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 prost = "0.11.0"
+futures = "0.3.24"
+futures-util = "0.3.24"
 
 [dependencies.tokio]
 version = "1.21.0"
